// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> Game SnapShot renders game with bees correctly 1`] = `
<div
  className="game container-fluid"
>
  <div
    className="no-gutters row"
  >
    <div
      className="col"
    >
      <p>
        Game
      </p>
    </div>
  </div>
  <div
    className="no-gutters row"
  >
    <div
      className="col"
    >
      <p>
        <strong>
          Total Bees:
        </strong>
      </p>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="card-columns"
    >
      <div
        className="bee-card card"
      >
        <img
          alt="worker Bee"
          className="card-img-top"
          src="./images/bees/worker.jpg"
          width="100%"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            testBee
          </h5>
          <h6
            className="card-subtitle"
          >
            worker
          </h6>
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Game /> Game SnapShot renders game with no bees correctly 1`] = `
<div
  className="game container-fluid"
>
  <div
    className="no-gutters row"
  >
    <div
      className="col"
    >
      <p>
        Game
      </p>
    </div>
  </div>
  <div
    className="no-gutters row"
  >
    <div
      className="col"
    >
      <p>
        <strong>
          Total Bees:
        </strong>
      </p>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="card-columns"
    />
  </div>
</div>
`;
